@@ -1,2 +1,2 @@
-EBUILD cl-tools-meta-12.0.ebuild 3126 RMD160 8cca34714fc65671aa2da61d8058d83cc006527a SHA1 240b9fbe6b7a946d8a83051c908c4aa54938d9b9 SHA256 988e0271946151bfd9252e4af8e407d9a39ef5ae594433ad4d41354f7ed31898
-MISC ChangeLog 6029 RMD160 ed2160c07332e0c86bcb0bb662f251346ef3d2ab SHA1 e2ddccd07792b891ce8a7e20d0bf7b65e1a5c9af SHA256 ab70c4913fd4db24bb409f9b1e7350b840c5056c550ec8b22b8a160021f7559e
+EBUILD cl-tools-meta-12.0-r1.ebuild 3152 SHA256 6bb0741aa72d819135206e44ce180d5e2d4af0d336bf26723ae4de823566f4aa SHA512 cb3956f1a7829c26f4d12e1ee2c535034312d87361276981794343a10e97903a3c71c6d83c7df800f2470b7c759782e30530bce589a6fd61bbc2d466759ed7eb WHIRLPOOL 159e9662969aafb76a1043e435527a81427c25e4e2db2d6d326d821669694922599c5d45c7c89ae0dc4a638d850c09fab3eea82b60ae0917a6182fe2abb7364a
+MISC ChangeLog 6223 SHA256 5f4b9943ca33042edb70a11e360e90ee1301e8029fc66c8341f6c789d660bf24 SHA512 62e7728ed1d8dd4162c54ae5f8071be2925dbb7ce0ad8de7fe3bdb4529c9c7bfe87e168202829b45ed5648a8f7453f6c343fd47480cd52b889faadc2b77328b1 WHIRLPOOL b89e4b7d193c222af3259d6f2a30b14314d9eb6ff6c9493af7a0119270f130d94e3b2c1d2c427abf2ed29c3337d6ed1f7859f5739d293ff819141094858dabc5
