@@ -1,0 +1,2 @@
+# Calculate belong()!=&&pkg(x11-terms/rxvt-unicode)!= path=/usr/share name=applications
+
