@@ -1,0 +1,1 @@
+# Calculate append=skip exists(/usr/share/applications/urxvt-rxvt-unicode.desktop,root)==||ini(desktop.terminal)==||ini(desktop.terminal)==terminal
