@@ -1,0 +1,8 @@
+# Calculate format=kde link=/usr/share/applications/urxvt-rxvt-unicode.desktop name=calculate-terminal.desktop mirror pkg(x11-terms/rxvt-unicode)>=9.15
+
+# Update info
+#-ini(desktop.terminal, terminal)-#
+
+# Hide icon
+[Desktop Entry]
+NoDisplay=true
