@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-tools-meta-12.0-r1 (25 Jul 2012)
+
+  25 Jul 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-tools-meta-12.0.ebuild, +cl-tools-meta-12.0-r1.ebuild:
+  Add x11-terms/rxvt-unicode
+
 *cl-tools-meta-12.0 (22 Jun 2012)
 
   22 Jun 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
